[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "congress-api"
version = "0.1.0"
description = "CLI tool to export 'Not Voting' roll call votes for a member in a given Congress term using the Congress.gov API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Congress API" }
]
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
congress-api = "congress_api.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]


